--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-plus": "^1.2.0-beta.3",
+    "flutterwave-vue-v3": "^1.0.5",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.7.1",
     "sass": "^1.43.4",
