--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
   },
   "lint-staged": {
     "src/**/*.{js,vue}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix"
     ]
   },
   "browserslist": [
